--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@ Cool Dark Ul Template for <br> Webflow Agencies!
     </nav>
 </header>
 <body>
+    <nav class="f">
+<div>
+    <h3> See It in Action</h3>Explore the live preview your <br>
+    brand in the bold new look <br><button class="h">Launch Live Preview</button>
+</div>
+<div>
+    <img src="./Assets/wc-mini.png" alt="">
+</div>
+    </nav>
+
     
 </body>
 </html>
