added my 4th commit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@ Cool Dark Ul Template for <br> Webflow Agencies!
     <img src="./Assets/wc-mini.png" alt="">
 </div>
     </nav>
-
+<nav class="l">
+    <h3 class="j"> Joined Thousands of Productive Users</h3>
+<nav class="i">
+    <div>
+        <h1 class="k">50K</h1>Active Users
+    </div>
+<div>
+    <h1 class="k">2M+</h1>Focus Sessions
+</div>
+<div>
+    <h1 class="k">95%</h1>Satisfaction rate</div> 
+</nav>
+</nav>
     
 </body>
 </html>
