also added 5th commit

--- a/index.html
+++ b/index.html
@@ -45,6 +45,34 @@ Cool Dark Ul Template for <br> Webflow Agencies!
     <h1 class="k">95%</h1>Satisfaction rate</div> 
 </nav>
 </nav>
-    
+    <div class="q">
+        <h2 class="r">What our users say</h2>
+        <nav class="o">
+<div class="s">
+<img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt="">
+<h3>Loved by Designers </h3> <br>This template instantly leveled up our <br>presence".-Studio Vertex
+<div class="p">
+<img class="pic" src="./Assets/avatar.png" alt="">
+Reviewer name <br>Date
+</div>
+</div>
+<div class="s">
+<img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt="">
+<h3>Loved by Designers</h3> <br>This template instantly leveled up our <br>presence".-Studio Vertex
+<div class="p">
+<img class="pic" src="./Assets/avatar.png" alt="">
+Reviewer name <br>Date
+</div>
+</div>
+<div class="s">
+<img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt=""> <img class="im" src="./Assets/icon-star.png" alt="">
+<h3>Loved by Designers</h3> <br>This template instantly leveled up our <br>presence".-Studio Vertex
+<div class="p">
+<img class="pic" src="./Assets/avatar.png" alt="">
+Reviewer name <br>Date
+</div>
+</div>
+        </nav>
+    </div>
 </body>
 </html>
