added this commit

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ Cool Dark Ul Template for <br> Webflow Agencies!
 </header>
 <body>
     <nav class="f">
-<div>
+<div class="cet">
     <h3> See It in Action</h3>Explore the live preview your <br>
-    brand in the bold new look <br><button class="h">Launch Live Preview</button>
+    brand in the bold new look <br> <br> <button class="h">Launch Live Preview</button>
 </div>
 <div>
     <img src="./Assets/wc-mini.png" alt="">
@@ -73,6 +73,41 @@ Reviewer name <br>Date
 </div>
 </div>
         </nav>
+    </div> <br> <br> <br>
+    <div class="ce">
+        <nav>
+            <h1>Ready to focus better </h1> <br>This template instantly leveled up our presence".-studio Vertex <br><br>
+        <button class="b"> Get Started Free</button>
+        </nav> <br>
+        <nav>
+            <img class="web" src="./Assets/wc-big.png" alt="">
+        </nav>
     </div>
+    <nav class="t">
+        <div>
+            <h1 class="bo">Let's Get in <br>Touch</h1>
+        </div>
+        <div class="co">Email <br>
+        <input type="email" placeholder="example@gmail.com"> <br>
+        name <br>
+        <input type="text" placeholder="full name"> <br>
+        massage <br>
+        <input type="text" placeholder="Write your massage">
+        <p><button class="h">Get in Touch</button></p>
+        </div>
+    </nav>
+    <nav class="li">
+<nav class="logo">LOGO</nav>
+<p class="center">
+    Ready to elevate online presence? Contact us today to discuss <br> your project and discover how we can bring vision to life.
+</p>
+<div><ul>
+    <li>Home</li>
+    <li>About</li>
+    <li>How it Works</li>
+    <li>Services</li>
+</ul>
+</div>
+    </nav>
 </body>
 </html>
